--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@angular/animations": "^10.0.14",
     "@angular/cdk": "^11.2.3",
     "@angular/common": "~10.0.0",
+    "@angular/cli": "~10.0.0",
     "@angular/compiler": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
     "@angular/core": "~10.0.0",
     "@angular/forms": "~10.0.0",
     "@angular/material": "^11.2.3",
